--- a/main.css
+++ b/main.css
@@ -1,34 +1,32 @@
 body {
-    font-family: 'Open Sans', sans-serif; /* Fonte para o corpo do texto */
+    font-family: 'Open Sans', sans-serif; 
     display: flex;
     justify-content: center;
     align-items: center;
     height: auto;
     padding: 200px;
     margin: 0;
-    background-color: #1A1A2E; /* Fundo escuro azul */
+    background-color: #1A1A2E; 
 }
 
 .container {
     text-align: center;
-    background-color: #F0F0F0; /* Fundo claro cinza */
+    background-color: #F0F0F0; 
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 90%;
     max-width: 600px;
-    border: 2px solid #CCCCCC; /* Borda cinza */
+    border: 2px solid #CCCCCC; 
 }
 
 h1 {
-    font-family: 'Poppins', sans-serif; /* Fonte para títulos */
-    font-weight: 700; /* Negrito */
-    color: #333333; /* Texto escuro */
+    font-family: 'Poppins', sans-serif;
+    color: #333333; 
 }
 
 p {
-    font-family: 'Open Sans', sans-serif; /* Fonte para o corpo do texto */
-    color: #333333; /* Texto escuro */
+    font-family: 'Open Sans', sans-serif; 
     font-size: 1.1em;
 }
 
@@ -64,10 +62,10 @@ p {
 }
 
 button {
-    font-family: 'Poppins', sans-serif; /* Fonte para botões */
-    font-weight: 600; /* Semi-negrito */
-    background-color: #007BFF; /* Azul */
-    color: #FFFFFF; /* Texto claro */
+    font-family: 'Poppins', sans-serif; 
+    font-weight: 600; 
+    background-color: #007BFF; 
+    color: #FFFFFF; 
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
@@ -78,7 +76,7 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3; /* Azul mais escuro */
+    background-color: #0056b3; /
 }
 
 #apagar-tarefas {
@@ -100,8 +98,8 @@ ul {
 ul li {
     display: flex;
     justify-content: space-between;
-    background-color: #FFFFFF; /* Fundo branco */
-    color: #333333; /* Texto escuro */
+    background-color: #FFFFFF; 
+    color: #333333; 
     width: 100%;
     height: 40px;
     padding-left: 10px;
@@ -114,24 +112,24 @@ ul li {
 
 .concluida span {
     text-decoration: line-through;
-    color: #888; /* Cinza para texto concluído */
+    color: #888; 
 }
 
 .concluida .editar-lista {
-    background-color: #CCCCCC; /* Cinza para botão editar concluído */
+    background-color: #CCCCCC; 
 }
 
 .concluida .editar-lista:hover {
-    background-color: #28A745; /* Verde ao passar o mouse */
+    background-color: #28A745; 
 }
 
 ul li input[type="checkbox"] {
     display: flex;
-    appearance: none; /* Remove o estilo padrão do checkbox */
+    appearance: none; 
     max-width: 18px;
     width: 18px;
     height: 18px;
-    border: 2px solid #333333; /* Borda escura */
+    border: 2px solid #333333; 
     background-color: transparent;
     border-radius: 4px;
     cursor: pointer;
@@ -139,17 +137,16 @@ ul li input[type="checkbox"] {
     margin-right: 10px;
 }
 
-/* Adicionando o "check" quando marcado */
 ul li input[type="checkbox"]:checked {
     background-color: transparent;
-    border-color: #28A745; /* Verde */
+    border-color: #28A745; 
 }
 
-/* Criando um ícone de check */
+
 ul li input[type="checkbox"]::before {
     content: "✔";
     font-size: 16px;
-    color: #28A745; /* Verde */
+    color: #28A745; 
     position: relative;
     bottom: 3px;
     left: 1px;
@@ -183,7 +180,7 @@ input[type="text"] {
     max-width: 500px;
     margin-top: 10px;
     margin-bottom: 10px;
-    border: 2px solid #CCCCCC; /* Borda cinza */
+    border: 2px solid #CCCCCC; 
     border-radius: 5px;
     font-size: 1em;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -192,13 +189,13 @@ input[type="text"] {
 }
 
 input[type="text"]:focus {
-    border-color: #007BFF; /* Azul ao focar */
+    border-color: #007BFF; 
     box-shadow: inset 0 2px 4px rgba(0, 123, 255, 0.3);
 }
 
 button.remover {
-    background-color: #DC3545; /* Vermelho */
-    color: #FFFFFF; /* Texto claro */
+    background-color: #DC3545; 
+    color: #FFFFFF; 
     padding: 5px 5px;
     border: none;
     border-radius: 5px;
@@ -209,12 +206,12 @@ button.remover {
 }
 
 button.remover:hover {
-    background-color: #A71D2A; /* Vermelho mais escuro */
+    background-color: #A71D2A; 
 }
 
 button.editar {
-    background-color: #28A745; /* Verde */
-    color: #FFFFFF; /* Texto claro */
+    background-color: #28A745; 
+    color: #FFFFFF; 
     padding: 5px 5px;
     border: none;
     border-radius: 5px;
@@ -225,14 +222,14 @@ button.editar {
 }
 
 button.editar:hover {
-    background-color: #1E7E34; /* Verde mais escuro */
+    background-color: #1E7E34; 
 }
 
 .botao_lista {
-    background-color: #DC3545; /* Vermelho */
+    background-color: #DC3545; 
 }
 
 .botao_lista:hover {
-    background-color: #A71D2A; /* Vermelho mais escuro */
-    color: #FFFFFF; /* Texto claro */
+    background-color: #A71D2A; 
+    color: #FFFFFF; 
 }
