--- a/main.css
+++ b/main.css
@@ -233,3 +233,132 @@ button.editar:hover {
     background-color: #A71D2A; 
     color: #FFFFFF; 
 }
+
+@media screen and (max-width: 767px) {
+    body {
+        padding: 20px;
+        min-height: 800px;
+        height: auto;
+    }
+
+    .container {
+        min-height: 30rem;
+        height: auto;
+        padding: 10px;
+        margin: 3rem 0;
+    }
+
+    .container h1 {
+        margin: 0;
+    }
+
+    .container p {
+        margin: 0;
+    }
+
+    .adicionarTarefas {
+        display: flex;
+        width: 100%;
+        flex-wrap: wrap;
+    }
+
+    .adicionarTarefas input[type="text"] {
+        height: 10px;
+        width: 90%;
+    }
+
+    .adicionarTarefas .botao-1 {
+        font-size: 92%;
+    }
+
+    .adicionarTarefas #apagar-tarefas {
+        display: block;
+        width: 35%;
+        margin-top: 10px;
+        font-size: 90%;
+        font-weight: bold;
+        justify-content: center;
+    }
+
+    ul li {
+        padding-left: 10px;
+        width: 97%;
+        height: 3rem;
+        font-size: 19px;
+    }
+
+    .editar-lista {
+        padding: 5px 3px;
+        font-size: 13px;
+    }
+
+    .remover-lista {
+        padding: 5px 3px;
+        font-size: 13px;
+    }
+
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    
+    body {
+        padding: 20px;
+        min-height: 800px;
+        height: auto;
+    }
+
+    .container {
+        min-height: 30rem;
+        height: auto;
+        padding: 10px;
+        margin: 3rem 0;
+    }
+
+    .container h1 {
+        font-size: 50px;
+    }
+
+    .container p {
+        font-size: 25px;
+    }
+
+    .adicionarTarefas {
+        gap: 11px;
+    }
+
+    .adicionarTarefas input[type="text"] {
+        height: 17px;
+        width: 50%;
+    }
+
+    .adicionarTarefas .botao-1 {
+        height: 2rem;
+        width: 2rem;
+        justify-content: center;
+        font-size: 92%;
+    }
+
+    .adicionarTarefas #apagar-tarefas {
+        margin-top: 10px;
+        font-size: 90%;
+        font-weight: bold;
+        justify-content: center;
+    }
+
+    ul li {
+        padding-left: 10px;
+        width: 97%;
+        height: 3rem;
+        font-size: 19px;
+    }
+
+    .editar-lista {
+        padding: 5px 3px;
+        font-size: 13px;
+    }
+
+    .remover-lista {
+        padding: 5px 3px;
+        font-size: 13px;
+    }
+}
